# hyview

./: CMakeLists.txt  LICENSE  README.md
include/: imageViewer.h
src/: imageViewer.cpp  imageViewer.h  main.cpp  readimage.cpp  readimage.h
